--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </aside>
 
     <!-- Header -->
-    <aside class="" style="background-color: #b3e2ec">
+    <aside class="" style="background-image: url('img/Header_backdrop.jpg'); background-size: auto; background-repeat: no-repeat; background-size: 100%; background-position: center;">
         <!-- <div class="container"> -->
             <div class="row">
                 <div class="col-lg-12">
@@ -66,7 +66,29 @@
                     </div>
 
                     <div class="col-md-3">
-                        <img class="featurette-image img-responsive center-block" src="img/Contact_details.jpg" height="300px" style="margin-top:10px; margin-bottom:10px">
+                        <!-- <img class="featurette-image img-responsive center-block" src="img/Contact_details.png" height="300px" style="margin-top:10px; margin-bottom:10px"> -->
+                        <table align="center">
+                            <tr>
+                                <td>
+                                    <img class="featurette-image img-responsive center-block" src="img/phone_img.png" height="300px" style="margin-top:10px; margin-bottom:10px; margin-right:15px">
+                                    
+                                </td>
+                                <td>
+                                    <label style="font-family:MyriadPro Regular; font-size:15px; color:#000000">416-0251/448-6500/367-1625</label>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>
+                                    <img class="featurette-image img-responsive center-block" src="img/mail_img.png" height="300px" style="margin-top:10px; margin-bottom:10px; margin-right:15px">
+                                    
+                                </td>
+                                <td>
+                                    <a href="mailto:sales@aquaaddonsystems.com" class="mailer_link" style="font-family:MyriadPro Regular; font-size:15px;">
+                                           <b>sales@aquaaddonsystems.com</b>
+                                    </a>
+                                </td>
+                            </tr>
+                        </table>
                     </div>
 
                     <div class="col-md-2" style="margin-left:-3%; margin-top:25px">
