Update on header and footer backgound image; mailto focus color updated

--- a/index.html
+++ b/index.html
@@ -39,8 +39,17 @@
         <div class="container-search">
             
             <div class="row home-group">
-                <div class="col-md-5 col-md-offset-1" align="center">
-                    <img src="img/home_search_logo_title.png" class="img-responsive" style="float:left">
+                <div class="col-md-6">
+                    <table align="center">
+                        <tr>
+                            <td>
+                                <img src="img/home_search_logo.png" class="featurette-image img-responsive center-block" style="margin:0px 10px 10px 10px">
+                            </td>
+                            <td>
+                                <label style="font-family:MyriadPro Regular; font-size:13px; color:#979797; margin:2px 10px 10px 10px">Head Office is located at #57 Corumi St., Masambong, Quezon City</label>
+                            </td>
+                        </tr>
+                    </table>
                     <!-- <label class="home-text">Head Office is located at #57 Corumi St., Masambong, Quezon City</label> -->
                 </div>
                 <div class="col-md-5 col-md-offset-1" align="center">
@@ -54,8 +63,7 @@
     </aside>
 
     <!-- Header -->
-    <aside class="" style="background-image: url('img/Header_backdrop.jpg'); background-size: auto; background-repeat: no-repeat; background-size: 100%; background-position: center;">
-        <!-- <div class="container"> -->
+    <aside class="" style="background-image: url('img/Header_backdrop_2.jpg'); background-size: auto; background-repeat: no-repeat; background-size: 100%; background-position: center;">
             <div class="row">
                 <div class="col-lg-12">
 
@@ -66,7 +74,6 @@
                     </div>
 
                     <div class="col-md-3">
-                        <!-- <img class="featurette-image img-responsive center-block" src="img/Contact_details.png" height="300px" style="margin-top:10px; margin-bottom:10px"> -->
                         <table align="center">
                             <tr>
                                 <td>
@@ -105,7 +112,6 @@
 
                 </div>
             </div>
-        <!-- </div> -->
     </aside>
     
     <!-- NAVBAR -->
@@ -410,7 +416,7 @@ We presently supply, install and service water purification and treatment in res
    
 
     <!-- Footer -->
-    <footer style="padding:20px 60px 20px 60px; background-color:#69bee1">
+    <footer style="padding:20px 60px 20px 60px; background-image: url('img/Footer_backdrop.jpg'); background-size: auto; background-repeat: no-repeat; background-size: 100%; background-position: center;">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-md-4" style="padding-top:50px">
