--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                                 <img src="img/home_search_logo.png" class="featurette-image img-responsive center-block" style="margin:0px 10px 10px 10px">
                             </td>
                             <td>
-                                <label style="font-family:MyriadPro Regular; font-size:13px; color:#979797; margin:2px 10px 10px 10px">Head Office is located at #57 Corumi St., Masambong, Quezon City</label>
+                                <label style="font-family:MyriadPro Regular; font-size:12px; color:#979797; margin:2px 10px 10px 10px">Head Office is located at #57 Corumi St., Masambong, Quezon City</label>
                             </td>
                         </tr>
                     </table>
@@ -107,7 +107,7 @@
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px; border-radius:40px"><label style="font-family: MyriadPro Regular;">Inquire Now</label></button>
+    margin: 4px 2px; border-radius:40px"><label style="font-family: MyriadPro Regular;"><a href="javascript:void(0)" class="inquire_link">Inquire Now</a></label></button>
                     </div>
 
                 </div>
@@ -119,9 +119,9 @@
         <div class="container-fluid" style="padding: 0px 350px 0px 350px;">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
-                <li><a href="#"><label style="color:#FFFFFF">About Us</label></a></li>
-                <li><a href="#"><label style="color:#FFFFFF">Products</label></a></li>
-                <li><a href="#"><label style="color:#FFFFFF">Contact</label></a></li>
+                <li><a href="#">About Us</a></li>
+                <li><a href="#">Products</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </div>
     </nav>
@@ -161,9 +161,7 @@
                                     <br>
                                     <label class="label-subtitle"><b>perforation</b></label>
 
-                                    <a href="javascript(0)">
-                                        <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 50px 15px 10px 20px; float:right"><b><u>LEARN MORE</u> > </b></label>
-                                    </a>
+                                    <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 50px 15px 10px 20px; float:right"><a href="javascript:void(0)" class="page_link"><b><u>LEARN MORE</u> > </b></a></label>
                                 </div>
                             </div>
                             <div class="row">
@@ -192,9 +190,7 @@
                                     <label style="font-family: MyriadPro Cond; font-size:30px; margin-bottom:70px; padding-top:40px; line-height:100%; color: #3a3a3a; display:inline-block;">Reverse osmosis systems are to purify water and remove salts and other impurities from tap and brackish water.</label>
                                 </div>
                                 <div class="col-md-12">
-                                    <a href="javascript(0)">
-                                        <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 50px 15px 10px 20px; float:right"><b><u>LEARN MORE</u> > </b></label>
-                                    </a>
+                                    <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 50px 15px 10px 20px; float:right"><a href="javascript:void(0)" class="page_link"><b><u>LEARN MORE</u> > </b></a></label>
                                 </div>
                             </div>
                         </div>
@@ -236,9 +232,7 @@
 
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="javascript(0)">
-                                        <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 5px 5px 10px 20px; float:right"><b><u>LEARN MORE</u> > </b></label>
-                                    </a>
+                                    <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 5px 5px 10px 20px; float:right"><a href="javascript:void(0)" class="page_link"><b><u>LEARN MORE</u> > </b></a></label>
                                 </div>
                             </div>
 
@@ -264,9 +258,7 @@
                             </div>
                             <div class="row">
                                 <div class="col-md-12">
-                                    <a href="javascript(0)">
-                                        <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 10px 5px 10px 20px; float:right"><b><u>LEARN MORE</u> > </b></label>
-                                    </a>
+                                    <label style="font-family: MyriadPro Bold Cond; color: #277595; font-size:18px;margin: 10px 5px 10px 20px; float:right"><a href="javascipt:void(0)" class="page_link"><b><u>LEARN MORE</u> > </b></a></label>
                                 </div>
                             </div>
                         </div>
@@ -312,7 +304,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><u>LEARN MORE</u> > </label>
+                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><a href="javascript:void(0)" class="page_link"><u>LEARN MORE</u> > </a></label>
 
                             </div>
 
@@ -332,7 +324,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><u>LEARN MORE</u> > </label>
+                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><a href="javascript:void(0)" class="page_link"><u>LEARN MORE</u> > </a></label>
 
                             </div>
                             
@@ -353,7 +345,7 @@
                                 <br>
                                 <br>
                                 <br>
-                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><u>LEARN MORE</u> > </label>
+                                <label style="color:#277595; font-family:MyriadPro Cond; font-size:25px;"><a href="javascript:void(0)" class="page_link"><u>LEARN MORE</u> > </a></label>
 
                             </div>
 
