Changes for navbar and about us fluid container

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
     </aside>
     
     <!-- NAVBAR -->
-    <nav class="navbar navbar-default" style="background-color:#69bee1; min-height: 40px">
+    <nav class="navbar navbar-default" style="background-color:#69bee1; padding: 0px">
         <div class="container-fluid col-md-8 col-sm-12 col-md-offset-4">
             <ul class="nav navbar-nav">
                 <li class="active"><a href="#">Home</a></li>
@@ -376,8 +376,9 @@
         <div class="container-fluid">
             <div class="row featurette">
 
-                <div class="col-md-1">
-                    <img class="featurette-image img-responsive center-block" src="img/About_us_img.png">
+                <div class="col-md-1" style="text-align:center">
+                    <!-- <img class="featurette-image img-responsive center-block" src="img/About_us_img.png"> -->
+                    <label class="vert-text " style="font-family: MyriadPro Bold Cond;">ABOUT US</label>
                 </div>
                 <div class="col-md-6">
                     <p class="lead">
